--- a/src/app/modules/contests/pages/contest/contest-standings/contest-standings.component.html
+++ b/src/app/modules/contests/pages/contest/contest-standings/contest-standings.component.html
@@ -15,7 +15,10 @@
     <contest-tab [contest]="contest"/>
   </div>
 
-  <kep-table [loading]="isLoading && contestants.length == 0" [empty]="contestants.length == 0">
+  <kep-table
+    spinnerColor="var(--bg)"
+    [loading]="isLoading && contestants.length == 0"
+    [empty]="contestants.length == 0">
     <ng-container header>
       <tr>
         <th class="text-center">#</th>
@@ -38,13 +41,13 @@
             <i data-feather="activity"></i>
           </a>
         </th>
-        @for (contestProblem of contestProblems;track contestProblem) {
+        @for (contestProblem of contestProblems; track contestProblem) {
           <th class="text-center" style="white-space: nowrap;">
             <a
               [routerLink]="['..', 'problem', contestProblem.symbol]"
               [ngbTooltip]="contestProblem.problem.title"
               tooltipClass="tooltip-primary"
-              container="body">
+              container=".contests-colors">
               {{ contestProblem.symbol }}
               @if (contest?.hasBalls()) {
                 <span>
@@ -58,7 +61,7 @@
     </ng-container>
 
     <ng-container body>
-      @for (contestant of contestants;track contestant) {
+      @for (contestant of contestants; track contestant) {
         <tr
           [@fadeInOnEnter]
           [ngClass]="{'bg-light-primary': currentUser?.username == contestant.username }">
@@ -107,12 +110,12 @@
               }
             </span>
           </td>
-          @for (contestProblem of contestProblems;track contestProblem) {
+          @for (contestProblem of contestProblems; track contestProblem) {
             <td class="text-center">
               <ng-template
-                  #selfie [ngTemplateOutlet]="selfie"
-                  let-problemInfo="aVariable"
-                  [ngTemplateOutletContext]="{
+                #selfie [ngTemplateOutlet]="selfie"
+                let-problemInfo="aVariable"
+                [ngTemplateOutletContext]="{
                     aVariable: getProblemInfoBySymbol(contestant.problemsInfo, contestProblem.symbol)
                   }">
                 <div>
@@ -141,7 +144,7 @@
           <th class="text-center">{{ 'CONTESTS.PENALTIES' | translate }}</th>
         }
         <th class="text-center"><i data-feather="activity"></i></th>
-        @for (contestProblem of contestProblems;track contestProblem) {
+        @for (contestProblem of contestProblems; track contestProblem) {
           <th class="text-dark text-center">
             {{ contestProblem.symbol }}
             <br>
