--- a/src/@core/components/core-menu/horizontal/collapsible/collapsible.component.html
+++ b/src/@core/components/core-menu/horizontal/collapsible/collapsible.component.html
@@ -13,7 +13,7 @@
     <kep-icon class="font-medium-4 mr-50 text-primary" type="duotone" [name]="item.icon"></kep-icon>
     <span>{{ item.translate | translate }}</span>
     @if (item.newCount) {
-      <span class="badge ml-50 badge-yellow badge-pill">New</span>
+      <span class="badge ml-50 badge-yellow badge-pill text-dark">New</span>
     }
   </ng-template>
   <!-- sub-menu item/collapsible -->
