--- a/src/bootstrap/scss/_variables.scss
+++ b/src/bootstrap/scss/_variables.scss
@@ -84,7 +84,7 @@ $theme-colors: map-merge(
     "danger":     $danger,
     "light":      $light,
     "dark":       $dark,
-    "yellow":     rgb(191 200 0 / 94%),
+    "yellow":     #ffdf00,
     "blue":       #4362eef0,
     "brown":      #ba782b,
   ),
