--- a/src/app/modules/arena/components/arena-list-card/arena-list-card.component.html
+++ b/src/app/modules/arena/components/arena-list-card/arena-list-card.component.html
@@ -1,7 +1,7 @@
 <div [show]="arena.status === -1" class="card" new-feature routerLink="tournament/{{ arena.id }}">
   <div class="card-header">
     <div class="card-title text-dark">
-      <kep-icon class="font-large-1" name="arena" type="duotone"></kep-icon>
+      <kep-icon class="font-large-1" name="arena" color="yellow" type="duotone"></kep-icon>
       <span class="ml-50 font-weight-bolder">
         {{ arena.title }}
       </span>
@@ -39,12 +39,12 @@
     </div>
 
     <div class="card-info">
-      <span class="mr-25 badge badge-yellow badge-glow" ngbTooltip="{{ 'Time' | translate }}">
+      <span class="mr-25 badge badge-yellow text-dark badge-glow" ngbTooltip="{{ 'Time' | translate }}">
         <kep-icon class="font-small-4" name="challenge-time"></kep-icon>
         {{ arena.timeSeconds }}
       </span>
 
-      <span class="badge badge-yellow badge-glow" ngbTooltip="{{ 'Questions' | translate }}">
+      <span class="badge badge-yellow text-dark badge-glow" ngbTooltip="{{ 'Questions' | translate }}">
         <kep-icon class="font-small-4" name="challenge-task"></kep-icon>
         {{ arena.questionsCount }}
       </span>
