--- a/src/app/modules/arena/pages/arena/arena.component.html
+++ b/src/app/modules/arena/pages/arena/arena.component.html
@@ -8,16 +8,16 @@
           <div class="card-title text-dark">{{ 'Links' | translate }}</div>
 
           <div [ngClass.lt-md]="'d-flex'" class="links">
-            <a [ngClass.lt-md]="'btn-sm'" [routerLink]="Resources.Challenges" class="btn btn-yellow text-dark mr-25 mr-mt-1">
-              <kep-icon class="font-medium-1" name="challenge"></kep-icon>
-              <span [ngClass.lt-md]="'d-none'">
+            <a [ngClass.lt-md]="'btn-sm'" [routerLink]="Resources.Challenges" class="btn btn-yellow mr-25 mr-mt-1">
+              <kep-icon color="dark" class="font-medium-1" name="challenge"></kep-icon>
+              <span class="text-dark" [ngClass.lt-md]="'d-none'">
                 {{ 'Challenges' | translate }}
               </span>
             </a>
 
             <a [ngClass.lt-md]="'btn-sm'" [routerLink]="Resources.ChallengesRating" class="btn btn-yellow text-dark mr-25 mr-mt-1">
-              <kep-icon class="font-medium-1" name="ranking"></kep-icon>
-              <span [ngClass.lt-md]="'d-none'">
+              <kep-icon color="dark" class="font-medium-1" name="ranking"></kep-icon>
+              <span class="text-dark" [ngClass.lt-md]="'d-none'">
                 {{ 'Rating' | translate }}
               </span>
             </a>
@@ -28,14 +28,18 @@
 
       <div class="useful-links row">
         <div class="col-6 pr-md-1 pr-25">
-          <a [ngClass.lt-md]="'font-small-3'" class="btn text-dark btn-yellow" routerLink="/learn/blog/post/72">
-            {{ 'AboutArena' | translate }}
+          <a [ngClass.lt-md]="'font-small-3'" class="btn btn-yellow" routerLink="/learn/blog/post/72">
+            <span class="text-dark">
+              {{ 'AboutArena' | translate }}
+            </span>
           </a>
         </div>
 
         <div class="col-6 pl-md-1 pl-25">
           <a [ngClass.lt-md]="'font-small-3'" class="btn text-dark btn-yellow" routerLink="/learn/blog/post/69">
-            {{ 'AboutChallenges' | translate }}
+            <span class="text-dark">
+              {{ 'AboutChallenges' | translate }}
+            </span>
           </a>
         </div>
       </div>
@@ -53,7 +57,7 @@
           count="5"
           animation="pulse"
           appearance="line"
-          [theme]="{height: '100px', background: 'var(--yellow)'}"
+          [theme]="{height: '100px', background: 'var(--skeleton-color)'}"
         ></ngx-skeleton-loader>
       } @else {
         <div class="row">
@@ -73,13 +77,11 @@
             [pageSize]="pageSize"
             [maxSize]="maxSize"
             [rotate]="true"
-            [color]="'brown'"
+            [color]="'yellow'"
             (pageChange)="reloadPage()">
           </kep-pagination>
         </div>
       }
-
     </div>
-
   </div>
 </div>
