--- a/src/app/modules/contests/pages/contest/contest-attempts/contest-attempts.component.html
+++ b/src/app/modules/contests/pages/contest/contest-attempts/contest-attempts.component.html
@@ -11,7 +11,7 @@
         </div>
 
         @if (isLoading && !total) {
-          <div [style.height.px]="400">
+          <div class="card" [style.height.px]="400">
             <spinner></spinner>
           </div>
         } @else if(attempts.length == 0) {
