--- a/src/app/modules/contests/components/contests-table/contests-table.component.html
+++ b/src/app/modules/contests/components/contests-table/contests-table.component.html
@@ -1,33 +1,27 @@
 <div class="card">
-  <div class="table-responsive contests-colors contest-{{ contests[0].id }} {{ contests[0].title }} contest-type-{{ contests[0].type }}">
-    <table class="table beautiful-table">
+  <div class="table-responsive beautiful-table {{ contests[0] | contestClasses }}">
+    <table class="table">
       <thead>
-        <tr class="bg-gradient-primary">
-          <th class="text-center">{{ 'CONTESTS.TITLE' | translate }}</th>
-          <th class="text-center">{{ 'CONTESTS.AUTHORS' | translate }}</th>
-          <th class="text-center">{{ 'CONTESTS.START_TIME' | translate }}</th>
-          <th class="text-center">{{ 'CONTESTS.FINISH_TIME' | translate }}</th>
-          <th class="text-center">{{ 'CONTESTS.TYPE' | translate }}</th>
-          <th class="text-center">
-            @if (contests.length > 0 && contests[0].status == -1) {
-              <div>
-                {{ 'CONTESTS.PROBLEMS_COUNT' | translate }}
-              </div>
-            }
-          </th>
-          <th class="text-center">
-            @if (contests.length > 0 && contests[0].status == -1) {
-              <span>
-                {{ 'CONTESTS.REGISTRANTS_COUNT' | translate }}
-              </span>
-            }
-            @if (contests.length > 0 && contests[0].status != -1) {
-              <span>
-                {{ 'CONTESTS.CONTESTANTS_COUNT' | translate }}
-              </span>
-            }
-          </th>
-        </tr>
+      <tr>
+        <th class="text-center">{{ 'CONTESTS.TITLE' | translate }}</th>
+        <th class="text-center">{{ 'CONTESTS.AUTHORS' | translate }}</th>
+        <th class="text-center">{{ 'CONTESTS.START_TIME' | translate }}</th>
+        <th class="text-center">{{ 'CONTESTS.FINISH_TIME' | translate }}</th>
+        <th class="text-center">{{ 'CONTESTS.TYPE' | translate }}</th>
+        <th class="text-center">
+          @if (contests.length > 0 && contests[0].status == -1) {
+            {{ 'CONTESTS.PROBLEMS_COUNT' | translate }}
+          }
+        </th>
+        <th class="text-center">
+          @if (contests.length > 0 && contests[0].status == -1) {
+            {{ 'CONTESTS.REGISTRANTS_COUNT' | translate }}
+          }
+          @if (contests.length > 0 && contests[0].status != -1) {
+            {{ 'CONTESTS.CONTESTANTS_COUNT' | translate }}
+          }
+        </th>
+      </tr>
       </thead>
       <tbody>
         @for (contest of contests; track contest) {
@@ -38,99 +32,89 @@
                 {{ contest.title }}
               </a>
               <br>
-                @if (contest.isRated) {
-                  <div class="text-success contest-rated">{{ 'CONTESTS.RATED' | translate }}</div>
-                }
-                @if (!contest.isRated) {
-                  <div class="text-danger contest-rated">{{ 'CONTESTS.UNRATED' | translate }}</div>
-                }
-              </td>
-              <td class="text-center">
-                @for (contestAuthor of contest.authors; track contestAuthor) {
-                  <div class="contest-author text-dark">
-                    <contestant-view [user]="contestAuthor"></contestant-view>
-                  </div>
-                }
-              </td>
-              <td class="text-center text-dark">
-                <u>{{ contest.startTime | date:'y/MM/dd'}}</u>
-                <br>
-                  <u>{{ contest.startTime | date:'H:mm'}}</u>
-                </td>
-                <td class="text-center text-dark">
-                  <u>{{ contest.finishTime | date:'y/MM/dd'}}</u>
-                  <br>
-                    <u>{{ contest.finishTime | date:'H:mm'}}</u>
-                  </td>
-                  <td class="text-center">
-                    <span class="badge contest-badge">
-                      {{ contest.type }}
-                    </span>
-                  </td>
-                  <td class="text-center">
-                    @if (contest.status == -1) {
-                      <div>
-                        <span class="badge contest-badge">
-                          {{ contest.problemsCount }}
-                        </span>
-                      </div>
-                    }
-                    @if (contest.status != -1) {
-                      <div>
-                        <!-- <contest-standings-popover [contest]="contest"></contest-standings-popover> -->
-                        <a class="btn btn-sm round" [routerLink]="['/competitions', 'contests', 'contest', contest.id, 'standings']">
-                          {{ 'CONTESTS.STANDINGS' | translate }}
-                        </a>
-                        <br>
-                          @if (currentUser) {
-                            <span class="badge mt-1 contest-badge-light">
-                              {{ 0 }} / {{ contest.problemsCount }}
-                            </span>
-                          }
-                        </div>
-                      }
-                    </td>
-                    <td class="text-center text-primary">
-                      <div class="avatar p-50 m-0 mb-1">
-                        <div class="avatar-content">
-                          <i data-feather="users" class="font-medium-3"></i>
-                        </div>
-                      </div>
-                      <h5 class="font-weight-bolder">
-                        <span
-                          class="badge contest-badge"
-                          [countUp]="contest.contestantsCount || contest.registrantsCount"
-                          [options]="{ duration: 5, reanimateOnClick: false }">
-                        </span>
-                      </h5>
-                    </td>
-                  </tr>
-                }
-              </tbody>
-              @if (contests.length > 1) {
-                <tfoot>
-                  <tr>
-                    <th class="text-center">{{ 'CONTESTS.TITLE' | translate }}</th>
-                    <th class="text-center">{{ 'CONTESTS.AUTHORS' | translate }}</th>
-                    <th class="text-center">{{ 'CONTESTS.START_TIME' | translate }}</th>
-                    <th class="text-center">{{ 'CONTESTS.FINISH_TIME' | translate }}</th>
-                    <th class="text-center">{{ 'CONTESTS.TYPE' | translate }}</th>
-                    <th class="text-center"></th>
-                    <th class="text-center">
-                      @if (contests.length > 0 && contests[0].status == -1) {
-                        <span>
-                          {{ 'CONTESTS.REGISTRANTS_COUNT' | translate }}
-                        </span>
-                      }
-                      @if (contests.length > 0 && contests[0].status != -1) {
-                        <span>
-                          {{ 'CONTESTS.CONTESTANTS_COUNT' | translate }}
-                        </span>
-                      }
-                    </th>
-                  </tr>
-                </tfoot>
+              @if (contest.isRated) {
+                <div class="text-success contest-rated">{{ 'CONTESTS.RATED' | translate }}</div>
               }
-            </table>
-          </div>
-        </div>
+              @if (!contest.isRated) {
+                <div class="text-danger contest-rated">{{ 'CONTESTS.UNRATED' | translate }}</div>
+              }
+            </td>
+            <td class="text-center">
+              @for (contestAuthor of contest.authors; track contestAuthor) {
+                <div class="contest-author text-dark">
+                  <contestant-view [user]="contestAuthor"></contestant-view>
+                </div>
+              }
+            </td>
+            <td class="text-center text-dark">
+              <u>{{ contest.startTime | date:'y/MM/dd' }}</u>
+              <br>
+              <u>{{ contest.startTime | date:'H:mm' }}</u>
+            </td>
+            <td class="text-center text-dark">
+              <u>{{ contest.finishTime | date:'y/MM/dd' }}</u>
+              <br>
+              <u>{{ contest.finishTime | date:'H:mm' }}</u>
+            </td>
+            <td class="text-center">
+          <span class="badge contest-badge">
+            {{ contest.type }}
+          </span>
+            </td>
+            <td class="text-center">
+              @if (contest.status == -1) {
+                <span class="badge contest-badge">
+                {{ contest.problemsCount }}
+              </span>
+              }
+              @if (contest.status != -1) {
+                <div>
+                  <!-- <contest-standings-popover [contest]="contest"></contest-standings-popover> -->
+                  <a class="btn btn-sm round"
+                     [routerLink]="['/competitions', 'contests', 'contest', contest.id, 'standings']">
+                    {{ 'CONTESTS.STANDINGS' | translate }}
+                  </a>
+                  <br>
+                </div>
+              }
+            </td>
+            <td class="text-center text-primary">
+              <div class="avatar p-50 m-0 mb-1">
+                <div class="avatar-content">
+                  <i data-feather="users" class="font-medium-3"></i>
+                </div>
+              </div>
+              <h5 class="font-weight-bolder">
+                <div
+                  class="badge contest-badge"
+                  [countUp]="contest.contestantsCount || contest.registrantsCount"
+                  [options]="{ duration: 5 }">
+                </div>
+              </h5>
+            </td>
+          </tr>
+        }
+      </tbody>
+      @if (contests.length > 1) {
+        <tfoot>
+        <tr>
+          <th class="text-center">{{ 'CONTESTS.TITLE' | translate }}</th>
+          <th class="text-center">{{ 'CONTESTS.AUTHORS' | translate }}</th>
+          <th class="text-center">{{ 'CONTESTS.START_TIME' | translate }}</th>
+          <th class="text-center">{{ 'CONTESTS.FINISH_TIME' | translate }}</th>
+          <th class="text-center">{{ 'CONTESTS.TYPE' | translate }}</th>
+          <th class="text-center"></th>
+          <th class="text-center">
+            @if (contests.length > 0 && contests[0].status == -1) {
+              {{ 'CONTESTS.REGISTRANTS_COUNT' | translate }}
+            }
+            @if (contests.length > 0 && contests[0].status != -1) {
+              {{ 'CONTESTS.CONTESTANTS_COUNT' | translate }}
+            }
+          </th>
+        </tr>
+        </tfoot>
+      }
+    </table>
+  </div>
+</div>
