--- a/src/app/modules/contests/components/contests-table/contests-table.component.scss
+++ b/src/app/modules/contests/components/contests-table/contests-table.component.scss
@@ -1,64 +1,10 @@
-th {
-  border-bottom: none !important;
-  border-top: none !important;
-}
-
-thead tr th,
-tfoot tr th {
-  font-size: 1rem;
-  font-weight: 600 !important;
-  text-transform: initial !important;
-}
-
-table>thead>tr>th:first-child {
-  border-top-left-radius: 6px;
-  border-bottom-left-radius: 6px;
-}
-
-table>tbody>tr>td:first-child {
-  min-width: 200px;
-  max-width: 300px;
-  // white-space: nowrap;
-}
-
-table>thead>tr>th:last-child {
-  border-top-right-radius: 6px;
-  border-bottom-right-radius: 6px;
-}
-
-td:nth-child(1) {
-  font-weight: 500;
-}
-
-td:nth-child(2) {
-  padding: 10px !important;
-}
-
-td:nth-child(3),
-th:nth-child(3) {
-  padding: 10px !important;
-}
-
-td:nth-child(4),
-th:nth-child(4) {
-  padding: 10px !important;
-}
-
-td:nth-child(6),
-th:nth-child(6) {
-  padding: 10px !important;
-}
+@import 'styles/kep-imports';
 
 .contest-author {
   font-size: 11px;
   padding-bottom: 10px;
   white-space: nowrap;
   font-weight: 600;
-}
-
-::ng-deep .contest-author .rating-title-img {
-  width: 28px !important;
-  height: 28px !important;
 }
 
 .contest-rated {
@@ -69,6 +15,10 @@ th:nth-child(6) {
 thead tr {
   background: var(--bg-gradient);
   color: var(--text-color);
+
+  @include dark-layout {
+    background: var(--bg-gradient) !important;
+  }
 }
 
 .badge.contest-badge {
