--- a/src/app/modules/contests/pages/contest/contest-problem/contest-problem.component.scss
+++ b/src/app/modules/contests/pages/contest/contest-problem/contest-problem.component.scss
@@ -28,7 +28,7 @@
 }
 
 .bg-light {
-  background-color: var(--bg-light);
+  background-color: var(--bg-light) !important;
 }
 
 ::ng-deep .dark-layout .contests-colors .bg-light {
