--- a/src/app/modules/contests/pages/contest/contest-standings/contest-standings.component.html
+++ b/src/app/modules/contests/pages/contest/contest-standings/contest-standings.component.html
@@ -10,9 +10,11 @@
         {{ contest.title }}
       </div>
     </div>
-
-    <contest-standings-countdown [contest]="contest"/>
     <contest-tab [contest]="contest"/>
+  </div>
+
+  <div class="contest-standings-top" *ngIf="contest.status == 0">
+    <contest-standings-countdown [contest]="contest"/>
   </div>
 
   <kep-table
