--- a/src/app/modules/contests/pages/contest/contest-problem/contest-problem.component.html
+++ b/src/app/modules/contests/pages/contest/contest-problem/contest-problem.component.html
@@ -1,5 +1,5 @@
 <div
-  class="content-wrapper container-xxl p-0 contests-colors contests-color contest-{{ contest?.id }} {{ contest?.title }} contest-type-{{ contest?.type }}">
+  class="content-wrapper container-xxl p-0 {{ contest | contestClasses }}">
   <div class="content-body">
     <!-- content-header component -->
     <app-content-header [contentHeader]="contentHeader"></app-content-header>
@@ -21,7 +21,7 @@
                 }
                 </div>
                 <div class="card-footer">
-                  <h2 class="text-center mb-4">
+                  <h2 class="text-center text-dark mb-2">
                     {{ contestProblem.symbol }}. {{ problem.title }}
                   </h2>
 
