--- a/src/app/shared/components/code-editor/code-editor-modal/code-editor-modal.component.html
+++ b/src/app/shared/components/code-editor/code-editor-modal/code-editor-modal.component.html
@@ -25,7 +25,7 @@
           </button>
         </div>
       </div>
-      <hr class="mt-0">
+      <hr class="mt-0 mb-50">
       <div class="card-body" [formGroup]="editorForm">
         <div class="row">
           <div class="col-lg-8 col-md-7 col-12">
