--- a/src/app/styles/colors/contests.scss
+++ b/src/app/styles/colors/contests.scss
@@ -34,8 +34,16 @@
         }
       }
 
+      .bg-gradient-primary {
+        background: rgba($color, 0.8) !important;
+
+        @include dark-layout {
+          background: rgba($color, 0.5) !important;
+        }
+      }
+
       kep-table {
-        tbody tr:hover {
+        tr:hover {
           background-color: rgba($color, 0.1) !important;
         }
       }
@@ -206,6 +214,16 @@ $math-color: #00a79d;
   }
 }
 
+// Uzinfocom
+@include define-contest-colors(
+  $selector: '&[class*="Uzinfocom"]',
+  $color: #186fb6d0,
+  $color-dark: #1870b6,
+  $background-light: linear-gradient(45deg, #005ea2bb, rgba(24, 111, 182, 0.623)),
+  $background-dark: linear-gradient(45deg, #042c4bde, #005ea2c9),
+);
+
+
 .contests-colors {
   &.contest-254 {
     --bg-gradient: linear-gradient(to right, #38CCBC, #07e4cf);
@@ -246,13 +264,6 @@ $math-color: #00a79d;
 
   &.contest-297 {
     --text-color: #fff;
-  }
-
-  &[class*="Uzinfocom"] {
-    --bg-gradient: linear-gradient(45deg, #005ea2bb, rgba(24, 111, 182, 0.623));
-    --bg: #186fb6d0;
-    --bg-light: rgba(24, 111, 182, 0.1);
-    --box-shadow: 0px 0px 5px #186fb6d3;
   }
 
   &[class*="UBTUIT"] {
@@ -313,12 +324,6 @@ $math-color: #00a79d;
     --bg: #b0b5b6;
     --box-shadow: 0px 0px 5px #b0b5b6;
     --text-color: #fff;
-  }
-
-  &[class*="Uzinfocom"] {
-    --bg-gradient: linear-gradient(45deg, #042c4bde, #005ea2c9);
-    --bg: #1870b6;
-    --box-shadow: 0px 0px 5px #1870b6;
   }
 
   &[class*="UBTUIT"] {
