--- a/src/app/styles/vuexy-extended/dark-layout.scss
+++ b/src/app/styles/vuexy-extended/dark-layout.scss
@@ -19,7 +19,7 @@ $colors: (
 
     @if ($color_name != 'white' and $color_name != 'dark' and $color_name != 'light' and $color_name != 'black') {
       .text-#{$color_name} {
-        color: mix(black, $color, 30) !important;
+        color: mix(white, $color, 30) !important;
       }
 
       .bg-gradient-#{$color_name} {
