--- a/src/app/modules/landing-page/sections/section-get-started/section-get-started.component.scss
+++ b/src/app/modules/landing-page/sections/section-get-started/section-get-started.component.scss
@@ -16,7 +16,7 @@
 
     @include dark-layout {
       opacity: 0.8;
-      background-image: url('assets/landing-page/beautiful-bg-dark-2.png') !important;
+      background-image: url('assets/landing-page/beautiful-bg-dark-2.webp') !important;
       background-size: cover;
     }
   }
