--- a/src/app/modules/landing-page/sections/section-practice/section-practice.component.scss
+++ b/src/app/modules/landing-page/sections/section-practice/section-practice.component.scss
@@ -15,7 +15,7 @@
     background: rgba(255, 255, 255, 0.5);
 
     @include dark-layout {
-      background-image: url('assets/landing-page/beautiful-bg-dark.png') !important;
+      background-image: url('assets/landing-page/beautiful-bg-dark.webp') !important;
       background-repeat: round !important;
     }
   }
