road to 90 | google page speed

--- a/src/app/modules/landing-page/sections/section-faq/section-faq.component.html
+++ b/src/app/modules/landing-page/sections/section-faq/section-faq.component.html
@@ -9,8 +9,8 @@
       <div class="row gy-5">
         <div class="col-lg-5">
           <div class="text-center">
-            <img alt="faq boy with logos" class="faq-image mb-lg-0 mb-2"
-                 src="https://demos.pixinvent.com/vuexy-html-admin-template/assets/img/front-pages/landing-page/faq-boy-with-logos.png">
+            <img loading="lazy" alt="faq boy with logos" class="faq-image mb-lg-0 mb-2"
+                 src="assets/landing-page/faq-boy-with-logos.webp">
           </div>
         </div>
         <div class="col-lg-7">
