--- a/src/app/modules/landing-page/sections/section-get-started/section-get-started.component.html
+++ b/src/app/modules/landing-page/sections/section-get-started/section-get-started.component.html
@@ -15,7 +15,7 @@
           </a>
         </div>
         <div class="col-md-6 col-12" [ngClass.lt-md]="'text-center'" [ngClass.gt-sm]="'text-right'">
-          <img height="220" width="220" class="img-fluid" alt="landing-img"
+          <img loading="lazy" height="220" width="220" class="img-fluid" alt="landing-img"
                [src]="isDarkMode ? 'assets/images/pages/login-v2-dark.svg'
                               : 'assets/images/pages/login-v2.svg'" />
 
