--- a/src/app/modules/landing-page/sections/section-contact-us/section-contact-us.component.html
+++ b/src/app/modules/landing-page/sections/section-contact-us/section-contact-us.component.html
@@ -9,8 +9,10 @@
       <div class="col-lg-5">
         <div class="contact-img-box position-relative border p-2 h-100">
           <img
+            loading="lazy"
             alt="contact-us"
-            class="contact-img w-100 scaleX-n1-rtl" src="assets/landing-page/contact_us.svg">
+            class="contact-img w-100 scaleX-n1-rtl"
+            src="assets/landing-page/contact_us.svg">
           <div class="pt-3 px-2 pb-1">
             <div class="row gy-3 gx-md-4">
               <div class="col-md-6 col-lg-12 col-xl-6">
