road to 90 | google page speed

--- a/src/app/modules/landing-page/landing-page.component.html
+++ b/src/app/modules/landing-page/landing-page.component.html
@@ -2,40 +2,36 @@
 <div class="content-wrapper container-xxl p-0">
   <div class="content-body">
     <section-header></section-header>
-    @defer (on viewport) {
-      <section-features></section-features>
-    } @placeholder {
-      <spinner height="400"></spinner>
-    }
+    <section-features></section-features>
     @defer (on viewport) {
       <section-practice></section-practice>
     } @placeholder {
-      <spinner height="400"></spinner>
+      <span></span>
     }
     @defer (on viewport) {
       <section-reviews></section-reviews>
     } @placeholder {
-      <spinner height="400"></spinner>
+      <span></span>
     }
     @defer (on viewport) {
       <section-statistics></section-statistics>
     } @placeholder {
-      <spinner height="400"></spinner>
+      <span></span>
     }
     @defer (on viewport) {
       <section-faq></section-faq>
     } @placeholder {
-      <spinner height="400"></spinner>
+      <span></span>
     }
     @defer (on viewport) {
       <section-get-started></section-get-started>
     } @placeholder {
-      <spinner height="400"></spinner>
+      <span></span>
     }
     @defer (on viewport) {
       <section-contact-us></section-contact-us>
     } @placeholder {
-      <spinner height="400"></spinner>
+      <span></span>
     }
   </div>
 </div>
