--- a/src/app/modules/landing-page/sections/section-header/section-header.component.html
+++ b/src/app/modules/landing-page/sections/section-header/section-header.component.html
@@ -8,8 +8,8 @@
   </div>
 
   <div class="text-center">
-    <img height="640" class="img-fluid" alt="landing-img"
-         [src]="isDarkMode ? 'assets/images/pages/coming-soon-dark.svg'
-                              : 'assets/images/pages/coming-soon.svg'" />
+    <img height="640" width="450" class="img-fluid" alt="landing-img"
+         [src]="isDarkMode ? 'assets/landing-page/coming-soon-dark.webp'
+                              : 'assets/landing-page/coming-soon.webp'" />
   </div>
 </div>
