road to 90 | google page speed

--- a/src/@core/layout/components/footer/footer.component.html
+++ b/src/@core/layout/components/footer/footer.component.html
@@ -6,10 +6,10 @@
         <div class="text-dark">{{ coreConfig.app.appTitle }} ©</div>
         <div>
           Powered by
-          <a href="https://www.djangoproject.com/" ngbTooltip="Django">
+          <a aria-label="Django" href="https://www.djangoproject.com/" ngbTooltip="Django">
             <kep-icon name="dj" type="duotone"></kep-icon>
           </a>
-          <a href="https://angular.io/" ngbTooltip="Angular">
+          <a aria-label="Angular" href="https://angular.io/" ngbTooltip="Angular">
             <kep-icon name="angular" type="duotone"></kep-icon>
           </a>
         </div>
