--- a/src/app/modules/landing-page/sections/section-features/section-features.component.html
+++ b/src/app/modules/landing-page/sections/section-features/section-features.component.html
@@ -1,11 +1,11 @@
 <div class="content-wrapper container-xxl p-0">
   <div class="content-body">
     <div class="text-center">
-      <span class="mb-2 badge badge-light-primary">{{ 'Features' | translate }}</span>
+      <span class="mb-2 badge badge-primary">{{ 'Features' | translate }}</span>
 
-      <h3 class="font-weight-bolder mb-1">
+      <h4 class="font-weight-bolder mb-1">
         {{ 'LandingPage.SectionFeaturesTitle' | translate }}
-      </h3>
+      </h4>
 
       <h5>
         {{ 'LandingPage.SectionFeaturesText' | translate }}
