road to 90 | google page speed

--- a/src/app/modules/landing-page/navbar/navbar.component.html
+++ b/src/app/modules/landing-page/navbar/navbar.component.html
@@ -56,7 +56,7 @@
           </div>
 
           <div class="switch">
-            <button class="btn btn-sm" (click)="switchMode()">
+            <button aria-label="switch" class="btn btn-sm" (click)="switchMode()">
               @if (isDarkMode) {
                 <kep-icon size="large-1" type="duotone" name="moon"></kep-icon>
               } @else {
