--- a/src/app/modules/landing-page/sections/section-header/section-header.component.html
+++ b/src/app/modules/landing-page/sections/section-header/section-header.component.html
@@ -3,7 +3,7 @@
   <div class="content-wrapper container-sm p-0">
     <div class="content-body text-center">
       <h1 class="section-title">{{ 'LandingPage.SectionTopTitle' | translate }}</h1>
-      <h4 class="ml-4 mr-4 section-sub-title text-dark">{{ 'LandingPage.SectionTopText' | translate }}</h4>
+      <div class="ml-4 mr-4 font-medium-1 section-sub-title text-dark">{{ 'LandingPage.SectionTopText' | translate }}</div>
     </div>
   </div>
 
