--- a/src/app/modules/landing-page/sections/section-practice/section-practice.component.scss
+++ b/src/app/modules/landing-page/sections/section-practice/section-practice.component.scss
@@ -6,8 +6,6 @@
   .bg-img {
     padding: 2rem 4rem;
     width: 100%;
-    background-repeat: round !important;
-    background-size: 200% 200%;
     position: absolute;
     height: 100%;
     border-radius: 3.5rem 3.5rem 0 0;
@@ -15,8 +13,7 @@
     background: rgba(255, 255, 255, 0.5);
 
     @include dark-layout {
-      background-image: url('assets/landing-page/beautiful-bg-dark.webp') !important;
-      background-repeat: round !important;
+      background: rgba(0, 0, 0, 0.25) !important;
     }
   }
 
