--- a/src/app/modules/landing-page/sections/section-reviews/review-card/review-card.component.html
+++ b/src/app/modules/landing-page/sections/section-reviews/review-card/review-card.component.html
@@ -9,7 +9,7 @@
     </p>
   </div>
   <div class="card-footer text-dark">
-    <img [src]="review.avatar" class="round mr-50" height="36" width="36">
+    <img alt="user-avatar" [src]="review.avatar" class="round mr-50" height="36" width="36">
     {{ review.username }}
   </div>
 </div>
