--- a/src/app/modules/landing-page/sections/section-faq/section-faq.component.html
+++ b/src/app/modules/landing-page/sections/section-faq/section-faq.component.html
@@ -9,7 +9,7 @@
       <div class="row gy-5">
         <div class="col-lg-5">
           <div class="text-center">
-            <img loading="lazy" alt="faq boy with logos" class="faq-image mb-lg-0 mb-2"
+            <img width="400" height="260" loading="lazy" alt="faq boy with logos" class="faq-image mb-lg-0 mb-2"
                  src="assets/landing-page/faq-boy-with-logos.webp">
           </div>
         </div>
