--- a/src/app/shared/components/kep-icon/kep-icon.component.scss
+++ b/src/app/shared/components/kep-icon/kep-icon.component.scss
@@ -1,2 +1,2 @@
-@import 'assets/plugins/keenicons/duotone/style';
-@import 'assets/plugins/keenicons/outline/style';
+@import 'assets/plugins/keenicons/duotone/style.css';
+@import 'assets/plugins/keenicons/outline/style.css';
