--- a/src/app/modules/landing-page/sections/section-header/section-header.component.scss
+++ b/src/app/modules/landing-page/sections/section-header/section-header.component.scss
@@ -1,7 +1,5 @@
 @import 'styles/kep-imports';
 
-$header-height: 800px;
-
 @keyframes gradient {
   0% {
     background-position: 0% 50%;
@@ -13,36 +11,6 @@ $header-height: 800px;
 
   100% {
     background-position: 0% 50%;
-  }
-}
-
-.page-top {
-  margin-bottom: $header-height / 4;
-}
-
-.page-top .bg-img {
-  position: absolute;
-  height: $header-height / 2;
-  width: 80%;
-  filter: blur(60px);
-  opacity: .3;
-}
-
-.page-top:before {
-  position: absolute;
-  top: -20px;
-  width: 100%;
-  z-index: -1;
-  height: $header-height;
-  border-radius: 0 0 3.5rem 3.5rem;
-  background-color: $gray-100;
-
-  @include media-breakpoint-down(md){
-    width: calc(100% + 0.8rem);
-  }
-
-  @include dark-layout {
-    background-color: $theme-dark-card-bg;
   }
 }
 
@@ -62,4 +30,9 @@ $header-height: 800px;
 
 .section-sub-title {
   line-height: 28px;
+}
+
+img {
+  margin-top: 4rem;
+  margin-bottom: 4rem;
 }
