roat to 90 | page speed

--- a/src/app/modules/landing-page/sections/section-contact-us/section-contact-us.component.html
+++ b/src/app/modules/landing-page/sections/section-contact-us/section-contact-us.component.html
@@ -1,7 +1,7 @@
 <div class="content-wrapper container-xxl p-0 mt-4 mb-2">
   <div class="content-body">
     <div class="text-center mb-1 pb-1">
-      <span class="badge badge-light-primary">{{ 'ContactUs' | translate }}</span>
+      <span class="badge badge-primary">{{ 'ContactUs' | translate }}</span>
     </div>
     <h3 class="text-center font-weight-bolder mb-1">{{ 'LandingPage.SectionContactUsTitle' | translate }}</h3>
     <p class="text-center mb-4">{{ 'LandingPage.SectionContactUsText' | translate }}</p>
