--- a/src/app/modules/landing-page/sections/section-features/section-features.component.html
+++ b/src/app/modules/landing-page/sections/section-features/section-features.component.html
@@ -3,13 +3,13 @@
     <div class="text-center">
       <span class="mb-2 badge badge-primary">{{ 'Features' | translate }}</span>
 
-      <h4 class="font-weight-bolder mb-1">
+      <div class="font-medium-1 font-weight-bolder mb-1">
         {{ 'LandingPage.SectionFeaturesTitle' | translate }}
-      </h4>
+      </div>
 
-      <h5>
+      <div class="font-small-4">
         {{ 'LandingPage.SectionFeaturesText' | translate }}
-      </h5>
+      </div>
 
       <div class="row features">
         @for (feature of features; track feature.title) {
