--- a/src/app/modules/landing-page/sections/section-faq/section-faq.component.html
+++ b/src/app/modules/landing-page/sections/section-faq/section-faq.component.html
@@ -2,7 +2,7 @@
   <div class="content-wrapper container-xxl">
     <div class="content-body pt-lg-2 pt-0">
       <div class="text-center mb-1 pb-1">
-        <span class="badge badge-light-primary">FAQ</span>
+        <span class="badge badge-primary">FAQ</span>
       </div>
       <h3 class="text-center mb-1 font-weight-bolder">{{ 'LandingPage.SectionFAQTitle' | translate }}</h3>
       <p class="text-center mb-2 pb-lg-3 pb-1">{{ 'LandingPage.SectionFAQText' | translate }}</p>
