--- a/src/app/modules/landing-page/sections/section-practice/section-practice.component.html
+++ b/src/app/modules/landing-page/sections/section-practice/section-practice.component.html
@@ -3,8 +3,8 @@
   <div class="content-wrapper container-xxl p-2">
     <div class="content-body text-center">
       <div class="row">
-        <div class="col-12 col-lg-6 d-flex align-items-center">
-          <div class="">
+        <div [style.height.px]="375" class="col-12 col-lg-6 d-flex align-items-center">
+          <div>
             <h2 class="text-primary">
               <kep-icon name="practice"></kep-icon>
               {{ 'LandingPage.SectionPracticeTitle' | translate }}
@@ -45,7 +45,7 @@
           </video>
         </div>
 
-        <div class="col-12 col-lg-6 order-1 order-lg-2 d-flex justify-content-center align-items-center">
+        <div [style.height.px]="375" class="col-12 col-lg-6 order-1 order-lg-2 d-flex justify-content-center align-items-center">
           <div class="text-center">
             <h2 class="text-primary">
               <kep-icon name="competition"></kep-icon>
