roat to 90 | page speed

--- a/src/@core/scss/base/core/menu/menu-types/horizontal-menu.scss
+++ b/src/@core/scss/base/core/menu/menu-types/horizontal-menu.scss
@@ -33,9 +33,9 @@
     }
   }
 
-  footer {
-    position: static !important;
-  }
+  //footer {
+  //  position: static !important;
+  //}
 
   //---------------//
   // Navbar Header //
