--- a/src/@core/layout/components/footer/footer.component.scss
+++ b/src/@core/layout/components/footer/footer.component.scss
@@ -5,8 +5,9 @@ app-layout {
 }
 
 footer.footer {
-  position: absolute !important;
-  bottom: calc(-321px - 20px) !important;
+  position: relative !important;
+  //position: absolute !important;
+  //bottom: calc(-321px - 20px) !important;
   //width: 100% !important;
 
   .card {
@@ -17,6 +18,7 @@ footer.footer {
     // background-color: mix(white, $primary, 95) !important;
   }
 
+  /*
   @include media-breakpoint-down(md) {
     bottom: calc(-427px - 20px) !important;
   }
@@ -24,4 +26,5 @@ footer.footer {
   @include media-breakpoint-down(sm) {
     bottom: calc(-571px  - 20px) !important;
   }
+  */
 }
