--- a/src/app/modules/landing-page/navbar/navbar.component.scss
+++ b/src/app/modules/landing-page/navbar/navbar.component.scss
@@ -17,6 +17,7 @@
   border-radius: 0.5rem;
   background: rgba(255, 255, 255, .5);
   border: 1px solid rgba(255, 255, 255, .7);
+  transition: 0.2s ease-in;
 
   @include media-breakpoint-down(sm) {
     padding: 1rem;
@@ -30,7 +31,6 @@
   &.navbar-active {
     background: white;
     border: 1px solid rgba(255, 255, 255, .9);
-    transition: 0.2s ease-in;
 
     @include dark-layout {
       background-color: rgba(0, 0, 0, .8);
@@ -63,6 +63,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
 
     .switch {
       display: flex;
