roat to 90 | page speed

--- a/src/app/modules/landing-page/sections/section-faq/section-faq.component.html
+++ b/src/app/modules/landing-page/sections/section-faq/section-faq.component.html
@@ -15,7 +15,7 @@
         </div>
         <div class="col-lg-7">
           @for (faq of data; track faq.id){
-            <ngb-accordion [closeOthers]="false" [destroyOnHide]="false">
+            <ngb-accordion>
               <ngb-panel [cardClass]="'mt-1 collapse-margin'" [id]="'faq' + $index">
                 <ng-template ngbPanelTitle>
                   <div class="d-flex justify-content-between">
