--- a/src/@core/layout/components/footer/footer.component.html
+++ b/src/@core/layout/components/footer/footer.component.html
@@ -1,21 +1,21 @@
-<section-footer/>
-<div class="card">
-  <div class="content-wrapper container-xxl p-0 full-width">
-    <div class="content-body">
-      <div class="card-body align-items-center d-flex justify-content-between">
-        <div class="text-dark">{{ coreConfig.app.appTitle }} ©</div>
-        <div>
-          Powered by
-          <a aria-label="Django" href="https://www.djangoproject.com/" ngbTooltip="Django">
-            <kep-icon name="dj" type="duotone"></kep-icon>
-          </a>
-          <a aria-label="Angular" href="https://angular.io/" ngbTooltip="Angular">
-            <kep-icon name="angular" type="duotone"></kep-icon>
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+<!--<section-footer/>-->
+<!--<div class="card">-->
+<!--  <div class="content-wrapper container-xxl p-0 full-width">-->
+<!--    <div class="content-body">-->
+<!--      <div class="card-body align-items-center d-flex justify-content-between">-->
+<!--        <div class="text-dark">{{ coreConfig.app.appTitle }} ©</div>-->
+<!--        <div>-->
+<!--          Powered by-->
+<!--          <a aria-label="Django" href="https://www.djangoproject.com/" ngbTooltip="Django">-->
+<!--            <kep-icon name="dj" type="duotone"></kep-icon>-->
+<!--          </a>-->
+<!--          <a aria-label="Angular" href="https://angular.io/" ngbTooltip="Angular">-->
+<!--            <kep-icon name="angular" type="duotone"></kep-icon>-->
+<!--          </a>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
 
 <!--<app-scroll-top *ngIf="coreConfig.layout.scrollTop"></app-scroll-top>-->
